--- a/index.html
+++ b/index.html
@@ -261,25 +261,25 @@
     <h2 class="section-title">Power Perks</h2>
     <div class="shop">
       <div class="item">
-        <h3>VC Mod <span class="info-icon" onclick="showDescription('vcModDescription')">❓</span></h3>
+        <h3>VC Mod <span class="info-icon" onclick="showDescription('vcModDescription')">ℹ</span></h3>
         <p>$15/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY"></div>
         <div class="description" id="vcModDescription" style="display:none;">Gain control over voice channels with the ability to mute, deafen, and move members between channels. Keep the conversation flowing smoothly.</div>
       </div>
       <div class="item">
-        <h3>Mod <span class="info-icon" onclick="showDescription('modDescription')">❓</span></h3>
+        <h3>Mod <span class="info-icon" onclick="showDescription('modDescription')">ℹ</span></h3>
         <p>$30/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-2"></div>
         <div class="description" id="modDescription" style="display:none;">Unlock powerful moderation tools: jail or free members, delete messages, view server logs (including deleted messages), timeout users, and manage image permissions. Includes all VC Mod abilities.</div>
       </div>
       <div class="item">
-        <h3>Senior Mod <span class="info-icon" onclick="showDescription('seniorModDescription')">❓</span></h3>
+        <h3>Senior Mod <span class="info-icon" onclick="showDescription('seniorModDescription')">ℹ</span></h3>
         <p>$60/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-3"></div>
         <div class="description" id="seniorModDescription" style="display:none;">Step up as a Senior Mod with access to everything from Mod and VC Mod, plus the added authority to ban members and demote users. Serious power for serious responsibility.</div>
       </div>
       <div class="item">
-        <h3>Head Administrator <span class="info-icon" onclick="showDescription('headAdminDescription')">❓</span></h3>
+        <h3>Head Administrator <span class="info-icon" onclick="showDescription('headAdminDescription')">ℹ</span></h3>
         <p>$300/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-4"></div>
         <div class="description" id="headAdminDescription" style="display:none;">The highest level of control. All powers from every role—VC Mod, Mod, and Senior Mod—are yours. Nothing is off-limits.</div>
@@ -291,13 +291,13 @@
     <h2 class="section-title">Ability Perks</h2>
     <div class="shop">
       <div class="item">
-        <h3>Image Perms <span class="info-icon" onclick="showDescription('imagePermsDescription')">❓</span></h3>
+        <h3>Image Perms <span class="info-icon" onclick="showDescription('imagePermsDescription')">ℹ</span></h3>
         <p>$3/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-5"></div>
         <div class="description" id="imagePermsDescription" style="display:none;">Share your world! This role lets you post images and videos, stream, and turn on your camera. Express yourself with no limits (within server rules).</div>
       </div>
       <div class="item">
-        <h3>Custom Role <span class="info-icon" onclick="showDescription('customRoleDescription')">❓</span></h3>
+        <h3>Custom Role <span class="info-icon" onclick="showDescription('customRoleDescription')">ℹ</span></h3>
         <p>$5/month</p>
         <div id="paypal-button-container-P-0TK23372HF1739735NAAKFDY-6"></div>
         <div class="description" id="customRoleDescription" style="display:none;">Craft a role that’s uniquely you. Pick any color, any symbol, and any font. Let your imagination run wild—just keep it within the server rules.</div>
